--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-fastapi
-spacy
-uvicorn
-pydantic
+
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+fastapi==0.109.2
+pydantic==2.6.1
+spacy==3.7.2
+uvicorn==0.27.0.post1
+
