--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "entity_dicts": [
+  "testing": "true", 
+  "entity_dicts": [
       {"label": "ORG", "pattern": [{"LOWER": "hamas"}]},
       {"label": "ORG", "pattern": [{"LOWER": "hizballah"}]}
     ],
