--- a/config.json
+++ b/config.json
@@ -2,10 +2,12 @@
   "testing": "false", 
   "entity_dicts": [
       {"label": "ORG", "pattern": [{"LOWER": "hamas"}]},
-      {"label": "ORG", "pattern": [{"LOWER": "hizballah"}]}
+      {"label": "ORG", "pattern": [{"TEXT": {"REGEX": "\\b[Hh]{1}[i|e]{1}zb[a|o]{1}ll[a|u]{1}h\\b"}}]}
     ],
-   
-    "allowed_labels": ["GPE",
+  "patterns": {
+    "PRODUCT": ["\\b[aA-zZ]{1,5}-(?:[A-Z0-9]{1,5}-)?[A-Z0-9]{1,5}\\b"]
+    },
+  "allowed_labels": ["GPE",
                         "FAC",
                         "PERSON",
                         "ORG",
