--- a/config.json
+++ b/config.json
@@ -2,10 +2,11 @@
   "testing": "false", 
   "entity_dicts": [
       {"label": "ORG", "pattern": [{"LOWER": "hamas"}]},
+      {"label": "ORG", "pattern": [{"LOWER": "isis"}]},
       {"label": "ORG", "pattern": [{"TEXT": {"REGEX": "\\b[Hh]{1}[i|e]{1}zb[a|o]{1}ll[a|u]{1}h\\b"}}]}
     ],
     "product_patterns":[
-        "\\b[aA-zZ]{1,5}-(?:[A-Z0-9]{1,5}-)?[A-Z0-9]{1,8}\\b",
+        "\\b[aA-zZ]{1,10}-(?:[A-Z0-9]{1,5}-)?[A-Z0-9]{1,8}\\b",
         "\\b(?:Project|TYPE|Type)\\s+\\d+[A-Z]?(?:X)?\\b",
         "\\b[A-Z]+-class\\b"
       ],
